# license-change

./: CMakeLists.txt  README.md  REUSE.toml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  delayedexecutiontimer.cpp  delayedexecutiontimer.h  info_dialog.cpp  info_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  opts_dialog.cpp  opts_dialog.h  proxy.cpp  proxy.h  textedit.cpp  textedit.h  worker.cpp  worker.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/utils/: CMakeLists.txt  main.cpp
